# autognosis

./: PROJECT_STRUCTURE.md  main.py  pyproject.toml
.claude/: launch.json
api/: graph_queries.py  server.py
chat/: chat.py  router.py
db/: __init__.py  cache.py  chat_repo.py  pool.py  schema.py
memory/: client.py
voice/: audio_capture.py  realtime_ws.py  router.py  session.py  tts.py
web/: app.js  index.html  styles.css
